# CausaOps

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: config.py  database.py  detect.py  detection.py  diagnostics.py  incidents.py  ingestion.py  main.py  models.py  schemas.py  seed.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_create_services.py  0002_add_telemetry.py  0003_add_incidents.py  0004_add_incident_diagnoses.py
apps/api/tests/: conftest.py  test_config.py  test_detection.py  test_diagnostics.py  test_health.py  test_ingestion.py
apps/demo-service/: .dockerignore  Dockerfile  pyproject.toml
apps/demo-service/app/: config.py  main.py  telemetry.py
apps/demo-service/tests/: test_demo.py
apps/web/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/incidents/: page.tsx
apps/web/app/incidents/[id]/: DiagnosisPanel.tsx  page.tsx
apps/web/lib/: api.ts
docs/architecture/: detection.md  diagnosis.md  mvp.md
docs/decisions/: 0001-modular-monolith.md
