[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "causaops-api"
version = "0.1.0"
description = "CausaOps API"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.14.0",
  "fastapi==0.115.6",
  "psycopg[binary]==3.2.13",
  "pydantic-settings==2.7.1",
  "sqlalchemy==2.0.36",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.4",
  "ruff==0.8.6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
